# mcp_sql_agent

./: .env.example  Dockerfile  README.md  database.db  docker-compose.yml  mcp_client.py  mcp_server.py  pyproject.toml
